compiler/teeny-compiler/tests/snapshots/test_compiler__elemwise_add_forward_sm90.snap
---
source: compiler/teeny-compiler/tests/test_compiler.rs
expression: generated_ptx.trim()
---
//
// Generated by LLVM NVPTX Back-End
//

.version 7.8
.target sm_89
.address_size 64

	// .globl	elemwise_add_forward_entry_point
.extern .shared .align 16 .b8 global_smem[];

.visible .entry elemwise_add_forward_entry_point(
	.param .u64 .ptr .global .align 1 elemwise_add_forward_entry_point_param_0,
	.param .u64 .ptr .global .align 1 elemwise_add_forward_entry_point_param_1,
	.param .u64 .ptr .global .align 1 elemwise_add_forward_entry_point_param_2,
	.param .u32 elemwise_add_forward_entry_point_param_3,
	.param .u64 .ptr .global .align 1 elemwise_add_forward_entry_point_param_4,
	.param .u64 .ptr .global .align 1 elemwise_add_forward_entry_point_param_5
)
.reqntid 128
{
	.reg .pred 	%p<3>;
	.reg .b32 	%r<33>;
	.reg .b64 	%rd<12>;
	.loc	1 3504 0
$L__func_begin0:
	.loc	1 3504 0

	ld.param.b64 	%rd7, [elemwise_add_forward_entry_point_param_0];
	ld.param.b64 	%rd8, [elemwise_add_forward_entry_point_param_1];
$L__tmp0:
	.loc	1 3508 5
	.loc	1 3482 15, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 	%r25, %ctaid.x;
	.loc	1 3482 61, function_name $L__info_string0, inlined_at 1 3508 5
	shl.b32 	%r26, %r25, 10;
	ld.param.b64 	%rd9, [elemwise_add_forward_entry_point_param_2];
	ld.param.b32 	%r27, [elemwise_add_forward_entry_point_param_3];
	.loc	1 3483 19, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 	%r28, %tid.x;
	and.b32 	%r29, %r28, 127;
	shl.b32 	%r30, %r29, 2;
	or.b32 	%r31, %r26, %r30;
	or.b32 	%r32, %r31, 512;
	.loc	1 3484 13, function_name $L__info_string0, inlined_at 1 3508 5
	setp.lt.s32 	%p1, %r31, %r27;
	setp.lt.s32 	%p2, %r32, %r27;
	.loc	1 3487 16, function_name $L__info_string0, inlined_at 1 3508 5
	mul.wide.s32 	%rd10, %r31, 4;
	add.s64 	%rd1, %rd7, %rd10;
	mul.wide.s32 	%rd11, %r32, 4;
	add.s64 	%rd2, %rd7, %rd11;
	.loc	1 3486 18, function_name $L__info_string0, inlined_at 1 3508 5
	// begin inline asm
	.loc	1 3486 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r1, 0x0;
	.loc	1 3487 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r2, 0x0;
	.loc	1 3488 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r3, 0x0;
	.loc	1 3489 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r4, 0x0;
	@%p1 ld.global.v4.b32 { %r1, %r2, %r3, %r4 }, [ %rd1 + 0 ];

	// end inline asm
	// begin inline asm
	.loc	1 3486 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r5, 0x0;
	.loc	1 3487 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r6, 0x0;
	.loc	1 3488 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r7, 0x0;
	.loc	1 3489 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r8, 0x0;
	@%p2 ld.global.v4.b32 { %r5, %r6, %r7, %r8 }, [ %rd2 + 0 ];

	// end inline asm
	.loc	1 3492 16, function_name $L__info_string0, inlined_at 1 3508 5
	add.s64 	%rd3, %rd8, %rd10;
	add.s64 	%rd4, %rd8, %rd11;
	.loc	1 3491 18, function_name $L__info_string0, inlined_at 1 3508 5
	// begin inline asm
	.loc	1 3491 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r9, 0x0;
	.loc	1 3492 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r10, 0x0;
	.loc	1 3493 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r11, 0x0;
	.loc	1 3494 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r12, 0x0;
	@%p1 ld.global.v4.b32 { %r9, %r10, %r11, %r12 }, [ %rd3 + 0 ];

	// end inline asm
	// begin inline asm
	.loc	1 3491 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r13, 0x0;
	.loc	1 3492 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r14, 0x0;
	.loc	1 3493 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r15, 0x0;
	.loc	1 3494 18, function_name $L__info_string0, inlined_at 1 3508 5
	mov.u32 %r16, 0x0;
	@%p2 ld.global.v4.b32 { %r13, %r14, %r15, %r16 }, [ %rd4 + 0 ];

	// end inline asm
	.loc	1 3495 20, function_name $L__info_string0, inlined_at 1 3508 5
	add.s64 	%rd5, %rd9, %rd10;
	add.s64 	%rd6, %rd9, %rd11;
	.loc	1 3496 23, function_name $L__info_string0, inlined_at 1 3508 5
	add.rn.f32 	%r17, %r1, %r9;
	add.rn.f32 	%r18, %r2, %r10;
	add.rn.f32 	%r19, %r3, %r11;
	add.rn.f32 	%r20, %r4, %r12;
	add.rn.f32 	%r21, %r5, %r13;
	add.rn.f32 	%r22, %r6, %r14;
	add.rn.f32 	%r23, %r7, %r15;
	add.rn.f32 	%r24, %r8, %r16;
	.loc	1 3495 69, function_name $L__info_string0, inlined_at 1 3508 5
	// begin inline asm
	@%p1 st.global.v4.b32 [ %rd5 + 0 ], { %r17, %r18, %r19, %r20 };

	// end inline asm
	// begin inline asm
	@%p2 st.global.v4.b32 [ %rd6 + 0 ], { %r21, %r22, %r23, %r24 };

	// end inline asm
$L__tmp1:
	.loc	1 3509 2
	ret;
$L__tmp2:
$L__func_end0:

}
	.file	1 "/tmp/teenyc_cache/elemwise_add_forward_4c7a5c0471152b71841256e3fac66e28eed19c3b2a2e6d36baa3c2563a88d913.rs"
	.section	.debug_abbrev
	{
.b8 1
.b8 17
.b8 1
.b8 37
.b8 8
.b8 19
.b8 5
.b8 3
.b8 8
.b8 16
.b8 6
.b8 27
.b8 8
.b8 0
.b8 0
.b8 2
.b8 46
.b8 0
.b8 3
.b8 8
.b8 32
.b8 11
.b8 0
.b8 0
.b8 3
.b8 46
.b8 1
.b8 17
.b8 1
.b8 18
.b8 1
.b8 49
.b8 19
.b8 0
.b8 0
.b8 4
.b8 29
.b8 0
.b8 49
.b8 19
.b8 17
.b8 1
.b8 18
.b8 1
.b8 88
.b8 11
.b8 89
.b8 5
.b8 87
.b8 11
.b8 0
.b8 0
.b8 0
	}
	.section	.debug_info
	{
.b32 211
.b8 2
.b8 0
.b32 .debug_abbrev
.b8 8
.b8 1
.b8 116
.b8 114
.b8 105
.b8 116
.b8 111
.b8 110
.b8 0
.b8 2
.b8 0
.b8 101
.b8 108
.b8 101
.b8 109
.b8 119
.b8 105
.b8 115
.b8 101
.b8 95
.b8 97
.b8 100
.b8 100
.b8 95
.b8 102
.b8 111
.b8 114
.b8 119
.b8 97
.b8 114
.b8 100
.b8 95
.b8 52
.b8 99
.b8 55
.b8 97
.b8 53
.b8 99
.b8 48
.b8 52
.b8 55
.b8 49
.b8 49
.b8 53
.b8 50
.b8 98
.b8 55
.b8 49
.b8 56
.b8 52
.b8 49
.b8 50
.b8 53
.b8 54
.b8 101
.b8 51
.b8 102
.b8 97
.b8 99
.b8 54
.b8 54
.b8 101
.b8 50
.b8 56
.b8 101
.b8 101
.b8 100
.b8 49
.b8 57
.b8 99
.b8 51
.b8 98
.b8 50
.b8 97
.b8 50
.b8 101
.b8 54
.b8 100
.b8 51
.b8 54
.b8 98
.b8 97
.b8 97
.b8 51
.b8 99
.b8 50
.b8 53
.b8 54
.b8 51
.b8 97
.b8 56
.b8 56
.b8 100
.b8 57
.b8 49
.b8 51
.b8 46
.b8 114
.b8 115
.b8 0
.b32 .debug_line
.b8 47
.b8 116
.b8 109
.b8 112
.b8 47
.b8 116
.b8 101
.b8 101
.b8 110
.b8 121
.b8 99
.b8 95
.b8 99
.b8 97
.b8 99
.b8 104
.b8 101
.b8 0
.b8 2
.b8 101
.b8 108
.b8 101
.b8 109
.b8 119
.b8 105
.b8 115
.b8 101
.b8 95
.b8 97
.b8 100
.b8 100
.b8 95
.b8 102
.b8 111
.b8 114
.b8 119
.b8 97
.b8 114
.b8 100
.b8 95
.b8 101
.b8 110
.b8 116
.b8 114
.b8 121
.b8 95
.b8 112
.b8 111
.b8 105
.b8 110
.b8 116
.b8 0
.b8 1
.b8 3
.b64 $L__func_begin0
.b64 $L__func_end0
.b32 132
.b8 4
.b32 132
.b64 $L__tmp0
.b64 $L__tmp1
.b8 1
.b8 180
.b8 13
.b8 5
.b8 0
.b8 0
	}
	.section	.debug_str
	{
$L__info_string0:
.b8 101
.b8 108
.b8 101
.b8 109
.b8 119
.b8 105
.b8 115
.b8 101
.b8 95
.b8 97
.b8 100
.b8 100
.b8 95
.b8 102
.b8 111
.b8 114
.b8 119
.b8 97
.b8 114
.b8 100
.b8 95
.b8 101
.b8 110
.b8 116
.b8 114
.b8 121
.b8 95
.b8 112
.b8 111
.b8 105
.b8 110
.b8 116
.b8 0
	}
	.section	.debug_macinfo	{	}

// --- triton-metadata ---
// meta:name=elemwise_add_forward_entry_point
// meta:num_warps=4
// meta:num_ctas=1
// meta:shared=0
// meta:tmem_size=0
// meta:global_scratch_size=0
// meta:global_scratch_align=1
// meta:profile_scratch_size=0
// meta:profile_scratch_align=1
