compiler/teeny-compiler/tests/snapshots/test_compiler__tensor_add_sm120.snap
---
source: compiler/teeny-compiler/tests/test_compiler.rs
expression: generated_ptx.trim()
---
//
// Generated by LLVM NVPTX Back-End
//

.version 12.0
.target sm_120
.address_size 64

	// .globl	entry_point
.extern .shared .align 16 .b8 global_smem[];

.visible .entry entry_point(
	.param .u64 .ptr .global .align 1 entry_point_param_0,
	.param .u64 .ptr .global .align 1 entry_point_param_1,
	.param .u64 .ptr .global .align 1 entry_point_param_2,
	.param .u32 entry_point_param_3,
	.param .u64 .ptr .global .align 1 entry_point_param_4,
	.param .u64 .ptr .global .align 1 entry_point_param_5
)
.reqntid 128
{
	.reg .pred 	%p<3>;
	.reg .b32 	%r<30>;
	.reg .b64 	%rd<5>;
$L__func_begin0:

	.loc	1 0 0
	mov.u32 	%r17, %ctaid.x;
	shl.b32 	%r18, %r17, 10;
	ld.param.b32 	%r19, [entry_point_param_3];
	mov.u32 	%r20, %tid.x;
	and.b32 	%r21, %r20, 127;
	and.b32 	%r22, %r20, 96;
	sub.s32 	%r23, %r21, %r22;
	shl.b32 	%r24, %r23, 2;
	shl.b32 	%r25, %r20, 2;
	and.b32 	%r26, %r25, 384;
	or.b32 	%r27, %r26, %r24;
	or.b32 	%r28, %r18, %r27;
	or.b32 	%r29, %r28, 512;
	setp.lt.s32 	%p1, %r28, %r19;
	setp.lt.s32 	%p2, %r29, %r19;
	// begin inline asm
	mov.u32 %r1, 0x0;
	mov.u32 %r2, 0x0;
	mov.u32 %r3, 0x0;
	mov.u32 %r4, 0x0;
	@%p1 ld.global.v4.b32 { %r1, %r2, %r3, %r4 }, [ %rd1 + 0 ];
	// end inline asm
	// begin inline asm
	mov.u32 %r5, 0x0;
	mov.u32 %r6, 0x0;
	mov.u32 %r7, 0x0;
	mov.u32 %r8, 0x0;
	@%p2 ld.global.v4.b32 { %r5, %r6, %r7, %r8 }, [ %rd2 + 0 ];
	// end inline asm
	add.rn.f32 	%r9, %r1, %r1;
	add.rn.f32 	%r10, %r2, %r2;
	add.rn.f32 	%r11, %r3, %r3;
	add.rn.f32 	%r12, %r4, %r4;
	add.rn.f32 	%r13, %r5, %r5;
	add.rn.f32 	%r14, %r6, %r6;
	add.rn.f32 	%r15, %r7, %r7;
	add.rn.f32 	%r16, %r8, %r8;
	// begin inline asm
	@%p1 st.global.v4.b32 [ %rd3 + 0 ], { %r9, %r10, %r11, %r12 };
	// end inline asm
	// begin inline asm
	@%p2 st.global.v4.b32 [ %rd4 + 0 ], { %r13, %r14, %r15, %r16 };
	// end inline asm
	ret;
$L__func_end0:

}
	.file	1 "<unknown>"
	.section	.debug_abbrev
	{
.b8 1
.b8 17
.b8 0
.b8 37
.b8 8
.b8 19
.b8 5
.b8 3
.b8 8
.b8 16
.b8 6
.b8 0
.b8 0
.b8 0
	}
	.section	.debug_info
	{
.b32 31
.b8 2
.b8 0
.b32 .debug_abbrev
.b8 8
.b8 1
.b8 116
.b8 114
.b8 105
.b8 116
.b8 111
.b8 110
.b8 0
.b8 2
.b8 0
.b8 60
.b8 117
.b8 110
.b8 107
.b8 110
.b8 111
.b8 119
.b8 110
.b8 62
.b8 0
.b32 .debug_line
	}
	.section	.debug_macinfo	{	}
