compiler/teeny-compiler/tests/snapshots/test_compiler__vector_add_sm90.snap
---
source: compiler/teeny-compiler/tests/test_compiler.rs
expression: generated_ptx.trim()
---
// TRITON_SHARED_MEM_BYTES: 0
// TRITON_GLOBAL_SCRATCH_BYTES_PER_CTA: 0
// TRITON_GLOBAL_SCRATCH_ALIGN: 1
//
// Generated by LLVM NVPTX Back-End
//

.version 8.7
.target sm_90a
.address_size 64

	// .globl	entry_point
.extern .shared .align 16 .b8 global_smem[];

.visible .entry entry_point(
	.param .u64 .ptr .global .align 1 entry_point_param_0,
	.param .u64 .ptr .global .align 1 entry_point_param_1,
	.param .u64 .ptr .global .align 1 entry_point_param_2,
	.param .u32 entry_point_param_3,
	.param .u64 .ptr .global .align 1 entry_point_param_4,
	.param .u64 .ptr .global .align 1 entry_point_param_5
)
.reqntid 128
{
	.reg .pred 	%p<3>;
	.reg .b32 	%r<38>;
	.reg .b64 	%rd<12>;
	.loc	1 2743 0
$L__func_begin0:
	.loc	1 2743 0

	ld.param.b64 	%rd7, [entry_point_param_0];
	ld.param.b64 	%rd8, [entry_point_param_1];
$L__tmp0:
	.loc	1 2727 15
	mov.u32 	%r25, %ctaid.x;
	.loc	1 2727 61
	shl.b32 	%r26, %r25, 10;
	ld.param.b64 	%rd9, [entry_point_param_2];
	ld.param.b32 	%r27, [entry_point_param_3];
	.loc	1 2728 19
	mov.u32 	%r28, %tid.x;
	and.b32 	%r29, %r28, 127;
	and.b32 	%r30, %r28, 96;
	sub.s32 	%r31, %r29, %r30;
	shl.b32 	%r32, %r31, 2;
	shl.b32 	%r33, %r28, 2;
	and.b32 	%r34, %r33, 384;
	or.b32 	%r35, %r34, %r32;
	or.b32 	%r36, %r26, %r35;
	or.b32 	%r37, %r36, 512;
	.loc	1 2729 13
	setp.lt.s32 	%p1, %r36, %r27;
	setp.lt.s32 	%p2, %r37, %r27;
	.loc	1 2730 16
	mul.wide.s32 	%rd10, %r36, 4;
	add.s64 	%rd1, %rd7, %rd10;
	mul.wide.s32 	%rd11, %r37, 4;
	add.s64 	%rd2, %rd7, %rd11;
	.loc	1 2729 37
	// begin inline asm
	mov.u32 %r1, 0x0;
	mov.u32 %r2, 0x0;
	mov.u32 %r3, 0x0;
	mov.u32 %r4, 0x0;
	@%p1 ld.global.v4.b32 { %r1, %r2, %r3, %r4 }, [ %rd1 + 0 ];
	// end inline asm
	// begin inline asm
	mov.u32 %r5, 0x0;
	mov.u32 %r6, 0x0;
	mov.u32 %r7, 0x0;
	mov.u32 %r8, 0x0;
	@%p2 ld.global.v4.b32 { %r5, %r6, %r7, %r8 }, [ %rd2 + 0 ];
	// end inline asm
	.loc	1 2732 16
	add.s64 	%rd3, %rd8, %rd10;
	add.s64 	%rd4, %rd8, %rd11;
	.loc	1 2731 22
	// begin inline asm
	mov.u32 %r9, 0x0;
	mov.u32 %r10, 0x0;
	mov.u32 %r11, 0x0;
	mov.u32 %r12, 0x0;
	@%p1 ld.global.v4.b32 { %r9, %r10, %r11, %r12 }, [ %rd3 + 0 ];
	// end inline asm
	// begin inline asm
	mov.u32 %r13, 0x0;
	mov.u32 %r14, 0x0;
	mov.u32 %r15, 0x0;
	mov.u32 %r16, 0x0;
	@%p2 ld.global.v4.b32 { %r13, %r14, %r15, %r16 }, [ %rd4 + 0 ];
	// end inline asm
	.loc	1 2733 27
	add.rn.f32 	%r17, %r1, %r9;
	add.rn.f32 	%r18, %r2, %r10;
	add.rn.f32 	%r19, %r3, %r11;
	add.rn.f32 	%r20, %r4, %r12;
	add.rn.f32 	%r21, %r5, %r13;
	add.rn.f32 	%r22, %r6, %r14;
	add.rn.f32 	%r23, %r7, %r15;
	add.rn.f32 	%r24, %r8, %r16;
	.loc	1 2734 22
	add.s64 	%rd5, %rd9, %rd10;
	add.s64 	%rd6, %rd9, %rd11;
	.loc	1 2733 34
	// begin inline asm
	@%p1 st.global.v4.b32 [ %rd5 + 0 ], { %r17, %r18, %r19, %r20 };
	// end inline asm
	// begin inline asm
	@%p2 st.global.v4.b32 [ %rd6 + 0 ], { %r21, %r22, %r23, %r24 };
	// end inline asm
$L__tmp1:
	.loc	1 2748 2
	ret;
$L__tmp2:
$L__func_end0:

}
	.file	1 "/tmp/teenygrad_rustc/vector_add_a4f9feb33ec138b229661dfa66937d317863eb3d093ec799ee70667743c5fa4b.rs"
	.section	.debug_abbrev
	{
.b8 1
.b8 17
.b8 1
.b8 37
.b8 8
.b8 19
.b8 5
.b8 3
.b8 8
.b8 16
.b8 6
.b8 27
.b8 8
.b8 0
.b8 0
.b8 2
.b8 46
.b8 0
.b8 3
.b8 8
.b8 32
.b8 11
.b8 0
.b8 0
.b8 3
.b8 46
.b8 1
.b8 17
.b8 1
.b8 18
.b8 1
.b8 49
.b8 19
.b8 0
.b8 0
.b8 4
.b8 29
.b8 0
.b8 49
.b8 19
.b8 17
.b8 1
.b8 18
.b8 1
.b8 88
.b8 11
.b8 89
.b8 5
.b8 87
.b8 11
.b8 0
.b8 0
.b8 0
	}
	.section	.debug_info
	{
.b32 183
.b8 2
.b8 0
.b32 .debug_abbrev
.b8 8
.b8 1
.b8 116
.b8 114
.b8 105
.b8 116
.b8 111
.b8 110
.b8 0
.b8 2
.b8 0
.b8 118
.b8 101
.b8 99
.b8 116
.b8 111
.b8 114
.b8 95
.b8 97
.b8 100
.b8 100
.b8 95
.b8 97
.b8 52
.b8 102
.b8 57
.b8 102
.b8 101
.b8 98
.b8 51
.b8 51
.b8 101
.b8 99
.b8 49
.b8 51
.b8 56
.b8 98
.b8 50
.b8 50
.b8 57
.b8 54
.b8 54
.b8 49
.b8 100
.b8 102
.b8 97
.b8 54
.b8 54
.b8 57
.b8 51
.b8 55
.b8 100
.b8 51
.b8 49
.b8 55
.b8 56
.b8 54
.b8 51
.b8 101
.b8 98
.b8 51
.b8 100
.b8 48
.b8 57
.b8 51
.b8 101
.b8 99
.b8 55
.b8 57
.b8 57
.b8 101
.b8 101
.b8 55
.b8 48
.b8 54
.b8 54
.b8 55
.b8 55
.b8 52
.b8 51
.b8 99
.b8 53
.b8 102
.b8 97
.b8 52
.b8 98
.b8 46
.b8 114
.b8 115
.b8 0
.b32 .debug_line
.b8 47
.b8 116
.b8 109
.b8 112
.b8 47
.b8 116
.b8 101
.b8 101
.b8 110
.b8 121
.b8 103
.b8 114
.b8 97
.b8 100
.b8 95
.b8 114
.b8 117
.b8 115
.b8 116
.b8 99
.b8 0
.b8 2
.b8 101
.b8 110
.b8 116
.b8 114
.b8 121
.b8 95
.b8 112
.b8 111
.b8 105
.b8 110
.b8 116
.b8 0
.b8 1
.b8 3
.b64 $L__func_begin0
.b64 $L__func_end0
.b32 125
.b8 4
.b32 125
.b64 $L__tmp0
.b64 $L__tmp1
.b8 1
.b8 187
.b8 10
.b8 5
.b8 0
.b8 0
	}
	.section	.debug_macinfo	{	}
